syntax = "proto3";

package test;

import "consensus.proto";

message PolkaSignature {
    // TODO: Add flag (no vote, nil, value?)
    Address validator_address = 1;
    Signature signature = 2;
}

message PolkaCertificate {
    uint64 height = 1;
    uint32 round = 2;
    ValueId value_id = 3;
    repeated PolkaSignature signatures = 4;
}

message RoundSignature {
    VoteType vote_type = 1;
    Address validator_address = 2;
    Signature signature = 3;
    // This is optional since a vote can be NIL.
    optional ValueId value_id = 4;
}

message RoundCertificate {
    uint64 height = 1;
    uint32 round = 2;
    repeated RoundSignature signatures = 3;
}

message LivenessMessage {
    oneof message {
        SignedMessage vote = 1;
        PolkaCertificate polka_certificate = 2;
        RoundCertificate round_certificate = 3;
    }
}
